<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/blueGreen"
    tools:context=".GenerateActivity">

    <TextView
        android:id="@+id/textview_specialChar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_specialChar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button_trueChar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/button_true" />

        <Button
            android:id="@+id/button_falseChar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightRed"
            android:text="@string/button_false"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_numQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_numbers"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button_trueNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/button_true" />

        <Button
            android:id="@+id/button_falseNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightRed"
            android:text="@string/button_false"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_length"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/edittext_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_length"
            android:inputType="number"
            android:autofillHints="length"
            android:minHeight="48dp"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_generate"
        android:autofillHints="results"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textview_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_results"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:autofillHints="results"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:backgroundTint="@color/gold"
        android:autofillHints="results"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back" />

</LinearLayout>