<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@color/lightBlue"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="210dp"
        android:layout_height="188dp"
        android:cropToPadding="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo_main" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_generateHome"
        android:backgroundTint="@color/green" />

    <Button
        android:id="@+id/button_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_view"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_logout"
        android:backgroundTint="@color/red"
        android:layout_marginTop="50dp" />

</LinearLayout>