<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/lightRed"
    tools:context=".ViewActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewHeader"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/lightBlue"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text14"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text15"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text16"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text17"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text18"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text19"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/text20"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <EditText
        android:id="@+id/edittext_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_delete"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:inputType="number"
        android:autofillHints="delete"
        android:minHeight="30dp"
        android:background="@color/lightBlue"
        android:layout_marginBottom="20dp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/button_delete"
            android:text="@string/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"/>

        <Button
            android:id="@+id/button_back"
            android:text="@string/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>